# Micro-credential

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  RENDER-DEPLOYMENT.md  alembic.ini  docker-compose.yml  metopen.md  pyproject.toml  pytest.ini  render.yaml
.github/agents/: CONTEXT-python-rules.md  bmd-custom-bmm-analyst.agent.md  (+10 more)
alembic/: env.py
cache/: AI_MicroCredential_Backend_PRD_v4.md  brownfield-architecture.md  mvp-microcredential-backend-prd.md  prd.md
docs/: PRE-COMMIT-CHECKLIST.md  architecture.md  brainstorming-session-results.md  implementation-blueprint.md  prd.md
scripts/: _template.py  check_current_state.py  check_data_analyst_q9.py  check_production_state.py  cleanup_fusion_jobs.py  clear_all_draft_assessments.py  clear_test_assessments.py  debug_production.py  deep_debug_assessment.py  export_openapi.py  fix_backend_q9_q10.py  fix_data_analyst_q10.py  fix_data_analyst_q9.py  fix_empty_responses.py  fix_production_metadata.py  fix_production_responses.py  fix_profiling_questions_manual.py  fix_q7_simple_format.py  fix_question_metadata.py  fix_question_templates_metadata.py  generate_test_token.py  manual_process_fusion.py  process_fusion_prod.py  process_jobs.py  process_jobs_render.py  queue_fusion_job.py  regenerate_fusion.py  render-build.sh  run-tests.sh  seed_questions.py  seed_questions_api.py  test_enrichment.py  test_natural_flow.py  test_personalization.py  test_production_with_mc.py  test_profiling_questions.py  test_q9_q10_options.py  test_rag_accuracy.py  test_rag_enrichment.py  test_user_questions.py  (+3 more)
tests/: conftest.py  utils.py
(+141 files in other folders)
